Migrate Yona to Play 3 and JGit 7
Port the legacy Play 2 application to Play 3 on OpenJDK 21, add compatibility shims, update JGit to 7.7.0, and fix login, project creation, repository, markdown, and core smoke-test regressions discovered during manual verification.