@@ -5,31 +5,40 @@ name := """yona"""
 
 version := "1.16.0"
 
+ThisBuild / scalaVersion := "2.13.18"
+
+routesGenerator := InjectedRoutesGenerator
+
+val ebeanRuntimeVersion = "14.3.0"
+val jgitVersion = "7.7.0.202606012155-r"
+
 libraryDependencies ++= Seq(
   // Add your project dependencies here,
   javaCore,
   javaJdbc,
-  javaEbean,
   javaWs,
-  cache,
-  // PlayAuthenticat for social login
-  // https://github.com/joscha/play-authenticate
-  "com.feth" %% "play-authenticate" % "0.6.9",
+  caffeine,
+  evolutions,
+  guice,
   // OWASP Java HTML Sanitizer
   // https://www.owasp.org/index.php/OWASP_Java_HTML_Sanitizer_Project
   "com.googlecode.owasp-java-html-sanitizer" % "owasp-java-html-sanitizer" % "20190610.1",
+  "org.commonmark" % "commonmark" % "0.27.0",
+  "org.commonmark" % "commonmark-ext-autolink" % "0.27.0",
+  "org.commonmark" % "commonmark-ext-gfm-strikethrough" % "0.27.0",
+  "org.commonmark" % "commonmark-ext-gfm-tables" % "0.27.0",
   // Add your project dependencies here,
   "com.h2database" % "h2" % "1.3.176",
   // JDBC driver for mariadb
   "org.mariadb.jdbc" % "mariadb-java-client" % "1.5.5",
   // Core Library
-  "org.eclipse.jgit" % "org.eclipse.jgit" % "4.5.0.201609210915-r",
+  "org.eclipse.jgit" % "org.eclipse.jgit" % jgitVersion,
   // Smart HTTP Servlet
-  "org.eclipse.jgit" % "org.eclipse.jgit.http.server" % "4.5.0.201609210915-r",
+  "org.eclipse.jgit" % "org.eclipse.jgit.http.server" % jgitVersion,
   // JGit Large File Storage
-  "org.eclipse.jgit" % "org.eclipse.jgit.lfs" % "4.5.0.201609210915-r",
+  "org.eclipse.jgit" % "org.eclipse.jgit.lfs" % jgitVersion,
   // JGit Archive Formats
-  "org.eclipse.jgit" % "org.eclipse.jgit.archive" % "4.5.0.201609210915-r",
+  "org.eclipse.jgit" % "org.eclipse.jgit.archive" % jgitVersion,
   // svnkit
   "org.tmatesoft.svnkit" % "svnkit" % "1.9.3",
   // svnkit-dav
@@ -41,12 +50,13 @@ libraryDependencies ++= Seq(
   // commons-codec
   "commons-codec" % "commons-codec" % "1.2",
   // apache-mails
-  "org.apache.commons" % "commons-email" % "1.2",
-  "info.schleichardt" %% "play-2-mailplugin" % "0.9.1",
+  "org.apache.commons" % "commons-email" % "1.5",
+  "com.sun.mail" % "javax.mail" % "1.6.2",
   "commons-lang" % "commons-lang" % "2.6",
+  "org.apache.commons" % "commons-lang3" % "3.18.0",
   "org.apache.tika" % "tika-core" % "1.2",
   "commons-io" % "commons-io" % "2.4",
-  "org.julienrf" %% "play-jsmessages" % "1.6.2",
+  "org.julienrf" %% "play-jsmessages" % "7.0.0",
   "commons-collections" % "commons-collections" % "3.2.1",
   "org.jsoup" % "jsoup" % "1.8.3",
   "com.googlecode.juniversalchardet" % "juniversalchardet" % "1.0.3",
@@ -56,50 +66,70 @@ libraryDependencies ++= Seq(
   "com.github.zafarkhaja" % "java-semver" % "0.7.2",
   "com.google.guava" % "guava" % "19.0",
   "com.googlecode.htmlcompressor" % "htmlcompressor" % "1.4",
+  "org.yaml" % "snakeyaml" % "1.17",
   "org.springframework" % "spring-jdbc" % "4.1.5.RELEASE",
-  "javax.xml.bind" % "jaxb-api" % "2.3.0",
+  "javax.servlet" % "javax.servlet-api" % "4.0.1",
+  "javax.xml.bind" % "jaxb-api" % "2.3.1",
+  "jakarta.persistence" % "jakarta.persistence-api" % "3.1.0",
+  "com.google.code.findbugs" % "jsr305" % "3.0.2",
   "com.github.mfornos" % "humanize-slim" % "1.2.2",
   "org.jsoup" % "jsoup" % "1.8.3"
 )
 
 val projectSettings = Seq(
   // Add your own project settings here
-  resolvers += "maven central" at "https://mvnrepository.com",
-  resolvers += "maven central2" at "https://repo1.maven.org/maven2/",
-  resolvers += "maven central3" at "https://repo.maven.apache.org/maven2",
+  resolvers += "maven central" at "https://repo1.maven.org/maven2/",
   resolvers += "jgit-repository" at "https://repo.eclipse.org/content/groups/releases/",
   resolvers += "java-semVer" at "https://oss.sonatype.org/content/repositories/snapshots/",
-  resolvers += "scm-manager release repository" at "https://maven.scm-manager.org/nexus/content/repositories/releases/",
+  resolvers += "scm-manager release repository" at "https://packages.scm-manager.org/repository/releases/",
   resolvers += "tmatesoft release repository" at "https://maven.tmatesoft.com/content/repositories/releases",
   resolvers += "tmatesoft snapshot repository" at "https://maven.tmatesoft.com/content/repositories/snapshots",
-  resolvers += "julienrf.github.com" at "http://julienrf.github.com/repo/",
-  resolvers += "opencast-public" at "http://nexus.opencast.org/nexus/content/repositories/public",
-  resolvers += "jfrog" at "http://repo.jfrog.org/artifactory/libs-releases/",
-  TwirlKeys.templateImports in Compile += "models.enumeration._",
-  TwirlKeys.templateImports in Compile += "scala.collection.JavaConversions._",
-  TwirlKeys.templateImports in Compile += "play.core.j.PlayMagicForJava._",
-  TwirlKeys.templateImports in Compile += "java.lang._",
-  TwirlKeys.templateImports in Compile += "java.util._",
-  includeFilter in (Assets, LessKeys.less) := "*.less",
-  excludeFilter in (Assets, LessKeys.less) := "_*.less",
-  javaOptions in test ++= Seq("-Xmx2g", "-Xms1g", "-Dfile.encoding=UTF-8"),
+  Compile / TwirlKeys.templateImports += "models.enumeration._",
+  Compile / TwirlKeys.templateImports += "play.core.j.PlayMagicForJava._",
+  Compile / TwirlKeys.templateImports += "java.lang._",
+  Compile / TwirlKeys.templateImports += "java.util._",
+  Compile / TwirlKeys.templateImports += "utils.TwirlCompat._",
+  Assets / LessKeys.less / includeFilter := "*.less",
+  Assets / LessKeys.less / excludeFilter := "_*.less",
+  javacOptions ++= Seq("--release", "21"),
+  Test / javaOptions ++= Seq("-Xmx2g", "-Xms1g", "-Dfile.encoding=UTF-8"),
   scalacOptions ++= Seq("-feature")
 )
 
-publishArtifact in packageDoc := false
+excludeDependencies += ExclusionRule(organization = "javax.servlet", name = "servlet-api")
 
-publishArtifact in packageSrc := false
+dependencyOverrides ++= Seq(
+  "io.ebean" % "ebean" % ebeanRuntimeVersion,
+  "io.ebean" % "ebean-api" % ebeanRuntimeVersion,
+  "io.ebean" % "ebean-core" % ebeanRuntimeVersion,
+  "io.ebean" % "ebean-agent" % ebeanRuntimeVersion,
+  "io.ebean" % "ebean-ddl-generator" % ebeanRuntimeVersion,
+  "io.ebean" % "ebean-jackson-mapper" % ebeanRuntimeVersion,
+  "io.ebean" % "ebean-platform-all" % ebeanRuntimeVersion,
+  "io.ebean" % "ebean-platform-h2" % ebeanRuntimeVersion,
+  "io.ebean" % "ebean-platform-mariadb" % ebeanRuntimeVersion,
+  "io.ebean" % "ebean-platform-mysql" % ebeanRuntimeVersion,
+  "io.ebean" % "ebean-platform-postgres" % ebeanRuntimeVersion,
+  "io.ebean" % "ebean-platform-sqlserver" % ebeanRuntimeVersion,
+  "io.ebean" % "ebean-querybean" % ebeanRuntimeVersion
+)
 
-buildInfoSettings
+Compile / doc / sources := Seq.empty
 
-sourceGenerators in Compile <+= buildInfo
+Compile / packageDoc / publishArtifact := false
+
+Compile / packageSrc / publishArtifact := false
+
+Compile / playEbeanModels := Seq("models.*")
 
 buildInfoKeys := Seq[BuildInfoKey](name, version)
 
 buildInfoPackage := "yona"
 
-mappings in Universal :=
-    (mappings in Universal).value.filterNot { case (_, file) => file.startsWith("conf/") }
+Universal / mappings :=
+    (Universal / mappings).value.filterNot { case (_, file) => file.startsWith("conf/") }
+
+Universal / javaOptions += "-J--add-exports=java.base/sun.security.x509=ALL-UNNAMED"
 
 NativePackagerKeys.bashScriptExtraDefines += """# Added by build.sbt
     |[ -n "$YONA_HOME" ] && addJava "-Duser.dir=$YONA_HOME"
@@ -115,38 +145,19 @@ NativePackagerKeys.bashScriptExtraDefines += """# Added by build.sbt
     |[ -f "$yobi_config_file" ] && addJava "-Dconfig.file=$yobi_config_file"
     |[ -f "$yobi_log_config_file" ] && addJava "-Dlogger.file=$yobi_log_config_file"
     |
-    |addJava "-DapplyEvolutions.default=true"
+    |addJava "-Dplay.evolutions.db.default.autoApply=true"
     |""".stripMargin
 
 NativePackagerKeys.batScriptExtraDefines += """
     | set "APP_CLASSPATH=%APP_LIB_DIR%\*"
-    | if NOT "%YONA_DATA%" == "" set "YONA_OPTS=-DapplyEvolutions.default=true -Duser.dir=%YONA_HOME% -Dyona.data=%YONA_DATA% -Dconfig.file=%YONA_DATA%\conf\application.conf -Dlogger.file=%YONA_DATA%\conf\application-logger.xml"
+    | if NOT "%YONA_DATA%" == "" set "YONA_OPTS=-Dplay.evolutions.db.default.autoApply=true -Duser.dir=%YONA_HOME% -Dyona.data=%YONA_DATA% -Dconfig.file=%YONA_DATA%\conf\application.conf -Dlogger.file=%YONA_DATA%\conf\application-logger.xml"
     |""".stripMargin
 
 lazy val yobi = (project in file("."))
       .enablePlugins(PlayScala)
       .enablePlugins(SbtWeb)
-      .enablePlugins(SbtTwirl)
+      .enablePlugins(PlayJava, PlayEbean, BuildInfoPlugin)
       .settings(projectSettings: _*)
-      .settings(net.virtualvoid.sbt.graph.Plugin.graphSettings: _*)
-      .settings(de.johoop.findbugs4sbt.FindBugs.findbugsSettings: _*)
-      .settings(findbugsExcludeFilters :=  Some(
-          <FindBugsFilter>
-            <!-- Exclude classes generated by PlayFramework. See docs/examples
-                 at http://findbugs.sourceforge.net/manual/filter.html for the
-                 filtering rules. -->
-            <Match>
-              <Class name="~views\.html\..*"/>
-            </Match>
-            <Match>
-              <Class name="~Routes.*"/>
-            </Match>
-            <Match>
-              <Class name="~controllers\.routes.*"/>
-            </Match>
-          </FindBugsFilter>
-        )
-      )
 
 
-fork in run := true
+run / fork := true
